<resources>
    <string name="app_name">Yarn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">James Gliwa</string>
    <string name="nav_header_subtitle">Treasure header extraordinaire</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Settings</string>
    <string name="action_start">Start</string>
    <string name="action_report">Report</string>
    <string name="action_abandon">Abandon</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_send">Send</string>
    <string name="signin">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="hint_treasure_hunt_name">Treasure Hunt Name</string>
    <string name="create">Create</string>
    <string name="bury_your_treasure">Bury Your Treasure!</string>
    <string name="treasure_hunts">Treasure Hunts</string>
    <string name="facebook_application_id" translatable="false">2397656563889384</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2397656563889384</string>
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="action_logout">Log Out</string>
    <string name="add_to_active">Add To Active</string>
    <string name="preferences">Preferences</string>
    <string name="leanback_preferences">Leanback Preferences</string>
    <string name="car_preferences">Car Preferences</string>
    <string name="basic_preferences">Basic attributes</string>
    <string name="title_basic_preference">Preference</string>
    <string name="summary_basic_preference">Simple preference with no special attributes</string>
    <string name="title_stylish_preference"><b>Very</b> <i>stylish</i> <u>preference</u></string>
    <string name="summary_stylish_preference">Define style tags such as &lt;b&gt; in a string resource to customize a preference\'s text</string>
    <string name="title_icon_preference">Icon preference</string>
    <string name="summary_icon_preference">Define a drawable to display it at the start of the preference</string>
    <string name="title_single_line_title_preference">Single line title preference - no matter how long the title is it will never wrap to multiple lines</string>
    <string name="summary_single_line_title_preference">This title will be ellipsized instead of wrapping to another line</string>
    <string name="widgets">Widgets</string>
    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="summary_checkbox_preference">Tap anywhere in this preference to toggle state</string>
    <string name="title_switch_preference">Switch preference</string>
    <string name="summary_switch_preference">Tap anywhere in this preference to toggle state</string>
    <string name="title_dropdown_preference">Dropdown preference</string>
    <string name="title_seekbar_preference">Seekbar preference</string>
    <string name="dialogs">Dialogs</string>
    <string name="title_edittext_preference">EditText preference</string>
    <string name="dialog_title_edittext_preference">This title can be changed!</string>
    <string name="title_list_preference">List preference</string>
    <string name="dialog_title_list_preference">Choose one option!</string>
    <string name="title_multi_list_preference">Multi-select list preference</string>
    <string name="summary_multi_list_preference">Shows a dialog with multiple choice options</string>
    <string name="dialog_title_multi_list_preference">Choose some options!</string>
    <string name="advanced_attributes">Advanced attributes</string>
    <string name="title_expandable_preference">Expandable preference group</string>
    <string name="summary_expandable_preference">This group shows one item and collapses the rest into the advanced button below</string>
    <string name="title_intent_preference">Intent preference</string>
    <string name="summary_intent_preference">Launches an intent when pressed</string>
    <string name="title_parent_preference">Parent preference</string>
    <string name="summary_parent_preference">Toggling this preference will change the enabled state of the preference below</string>
    <string name="title_child_preference">Child preference</string>
    <string name="summary_child_preference">The enabled state of this preference is controlled by the preference above</string>
    <string name="title_toggle_summary_preference">Variable summary preference</string>
    <string name="summary_on_toggle_summary_preference">On! :) - the summary of this preference changes depending on its state</string>
    <string name="summary_off_toggle_summary_preference">Off! :( - the summary of this preference changes depending on its state</string>
    <string name="title_copyable_preference">Copyable preference</string>
    <string name="summary_copyable_preference">Long press on this preference to copy its summary</string>
    <string name="create_an_adventure">Create An Adventure</string>
    <string name="invite_your_friends">Invite Your Friends</string>
    <string name="feedback">Feedback</string>
    <string name="your_adventures">Your Adventures</string>
    <string name="add_adventure_by_qr_code">Add Adventure By QR Code</string>
    <string name="follow_adventure">Follow Adventure</string>
    <string name="todo">TODO</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="camera_rationale">Need Da Cam for da pics</string>
    <string name="rationale_ask_ok">We Gud?</string>
    <string name="rationale_ask_cancel">Nah, fam</string>
    <string name="treasure_hunt_detail_img_content_description">The image associated with the treasure hunt</string>
    <string name="clue_prompt_locked">Clue is locked</string>
    <string name="your_answer_here">Your answer here</string>
    <string name="night_mode_enabled">night_mode_enabled</string>
    <string name="preview">Preview</string>
    <string name="describe_your_adventure">Describe your adventure!</string>
    <string name="add_clue">Add Clue</string>
    <string name="text_clue_type_description">image for the text clue type</string>
    <string name="photo_clue_type_content_description">image for the photo clue type</string>
    <string name="treasure_clue_type_content_description">image fore the treasure clue type</string>
    <string name="waypoint_clue_type_content_description">image for the waypoint clue type</string>
    <string name="choose_the_location_of_your_clue">Choose the location of your clue</string>
    <string name="confirm_location_clue">confirm location clue</string>
    <string name="hint">Hint</string>
    <string name="accept_radius">Accept Radius</string>
    <string name="card_image_for_an_adventure">card image for an adventure</string>
    <string name="you_completed_the_adventure">You Completed the adventure!</string>
    <string name="profile">Profile</string>
    <string name="list">List</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="created">Created</string>
    <string name="answer">Answer</string>
    <string name="hint_1">Hint #1</string>
    <string name="hint_2">Hint #2</string>
    <string name="hint_3">Hint #3</string>
    <string name="optional">Optional</string>
    <string name="clue_text_create_explanation">Here is where you can create a \"Text\" based clue. A user\'s guess will need to match your expected answer (within reason) for the clue to be accepted.</string>
    <string name="clue">Clue</string>
    <string name="explore">Explore</string>
    <string name="lets_explore">Where will you explore?</string>
    <string name="clue_create_upload_explanation">When you uplaod an image our algorithm will show you what tags are associated with that image. These tags are what will be checked when someone attempts to solve your clue. Select the tags that best describe your subject.</string>
    <string name="upload_options_dialog_text">Take a new photo or select one from your existing photo library.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="take_picture">Take Picture</string>
    <string name="hint_for_your_photo_clue">Hint for your photo clue</string>
    <string name="recent_reviews">Recent Reviews</string>
    <string name="dot">•</string>
    <string name="upcoming_adventures">Upcoming Adventures</string>
    <string name="design_the_next_adventure">Create the next adventure</string>
    <string name="call_to_create_description">Whether it\'s a coffee crawl, haunted house walk, or cross-city amazing race, creating an adventure is a great way to share your interests with others and earn you some money doing it. All adventures that are selected to be featured will earn the creator a creation bonus as well as allow the creator to receive tips from adventurers who enjoyed your creation.</string>
    <string name="learn_more"><![CDATA[Learn more >]]></string>
    <string name="where_will_you_explore">Where will you explore?</string>
    <string name="discover_the_origins_of_the_kraken">Discover the origins of the Kraken</string>
    <string name="there_are_whispers">There are whispers of its whereabouts...</string>
    <string name="hunt_the_kraken">Hunt The Kraken</string>
    <string name="map">Map</string>
    <string name="nearby_adventures">Nearby Adventures</string>
    <string name="solve_from_home">Solve from home</string>
    <string name="solve_from_home_description">Who says you can\'t explore from the comfort of your own couch? These adventures are purely text-clue based and can be done where you are.</string>
    <string name="explore_all">Explore all</string>
    <string name="str_continue">Continue</string>
    <string name="next">Next</string>
    <string name="choose_a_clue_type">Choose a clue type</string>
    <string name="text">Text</string>
    <string name="clue_type_explanation">Requires a solver to type the correct answer to the clue</string>
    <string name="photo">Photo</string>
    <string name="location">Location</string>
    <string name="clue_photo_type_explanation">Requires the solver to take a photo of the clue\'s solution</string>
    <string name="clue_type_location_explanation">Requires the solver to physically navigate to the correct location described in the clue</string>
    <string name="treasure_slider_explanation">Whatever Booty you set as a reward will be awarded to the first 5 finishers of your adventure.</string>
    <string name="purchase_booty">Purchase Booty</string>
    <string name="img_preview">img_preview</string>
    <string name="clue_radius">Clue radius:</string>
    <string name="clue_locked">Clue locked</string>
    <string name="clue_current_action_text">Solve</string>
</resources>