<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/advCreateFragment"
        android:icon="@drawable/ic_add_location_black_24dp"
        android:title="@string/create" />
    <item
        android:id="@id/mapFragment"
        android:icon="@drawable/ic_map_24"
        android:title="@string/map" />
    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/explore" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />

    <item
        android:id="@id/settingsContainerFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_tools" />
</menu>
