<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/treasure_menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/your_adventures"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/your_adventures" />
        <item
            android:id="@+id/add_adventure_by_qr_code"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/add_adventure_by_qr_code" />
        <item
            android:id="@id/treasureHuntsFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/treasure_hunts" />
        <item
            android:id="@+id/treasureCreateFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/create_an_adventure" />
    </group>

    <group
        android:id="@+id/social_menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/invite_your_friends"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/invite_your_friends" />
    </group>


    <group
        android:id="@+id/settings_menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@id/settingsContainerFragment"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />

        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/feedback" />

    </group>
</menu>
